# intercome

./: .env.example  .gitignore  README.md  docker-compose.yml  setup-network.sh  start-backend.sh  start-frontend.sh  start.sh
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_apartments.py  b2c3d4e5f6a7_apartment_cloud_relay.py  c3d4e5f6a7b8_add_webrtc_endpoints.py  ec6141f5fc09_initial_schema.py
backend/app/: main.py
backend/app/ami/: client.py  consumer.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: apartments.py  auth.py  calls.py  dashboard.py  devices.py  events.py  routing_rules.py  sip.py
backend/app/cloud/: bridge.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/events/: bus.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  call_store.py  connectivity_service.py  device_service.py  go2rtc_service.py  polling_service.py  rtsp_service.py  sip_service.py  unlock_service.py
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_devices.py  test_routing_rules.py  test_security.py
docker/asterisk/: asterisk.conf  extensions.conf  extensions_apartments.conf  manager.conf  pjsip.conf  pjsip_webrtc.conf  rtp.conf
docker/go2rtc/: go2rtc.yaml
docker/nginx/: server.crt  server.key
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
(+29 files in other folders)
